2004-07-01  Lars Clausen  <lars@raeder.dk>

	* app/display.c (new_display): 
	* app/dia-props.c: 
	* lib/diagramdata.c (new_diagram_data): 
	* lib/diagramdata.h: 
	* app/preferences.h: 
	* app/preferences.c: 
	* app/grid.c: 
	* app/diagram.c: 
	* lib/diagramdata.c (new_diagram_data): Patch from Peter Poulsen
	<peter_poulsen@stofanet.dk>: Add hexagonal grid!

	* HACKING: 
	* doc/pl/authors.xml: 
	* doc/en/authors.xml: 
	* lib/object_defaults.c (dia_object_defaults_save): 
	* readme.win32 (BTW): 
	* lib/persistence.c (persistence_save): 
	* app/load_save.c (diagram_data_write_doc): 
	* app/commands.c (help_about_callback): 
	* README: Fix links to home page.

	* lib/font.c: 
	* app/load_save.c (diagram_data_load): 
	* lib/prop_text.c (stringprop_load): Avoid NULL strings when
	loading, and guard against them when fonting.

	* lib/diarenderer.c (draw_rounded_polyline): Patch from
	anthonym@overture.com:  Make limited rounding a corner-specific
	rendering-only thing.

2004-06-30  Lars Clausen  <lars@raeder.dk>

	* lib/font.c (dia_font_build_layout): Return to 0.93.1 font size
	adjustment: If you can't fix it, at least don't change it.

	* objects/SADT/arrow.c (sadtarrow_draw): Use new rounded arrow
	code instead of individual code in here.

2004-06-29  Lars Clausen  <lars@raeder.dk>

	* objects/UML/association.c: Patch from Kiran
	Kumar Immidi <kimmidi@novell.com>:  Fix bounding box for line end
	text. 

	* lib/geometry.c: 
	* lib/geometry.h: 
	* lib/diarenderer.c (draw_rounded_polyline): 
	* objects/standard/polyline.c (polyline_draw): 
	* objects/standard/zigzagline.c (zigzagline_draw): 
	Patch from anthonym@overture.com:  Add rounded polylines.

2004-06-27  Lars Clausen  <lars@raeder.dk>

	* lib/font.c (dia_font_new_from_style): Initialize legacy name.

	* lib/widgets.c (dia_font_selector_get_family_from_name): Don't
	free family list before taking out the pointer we need. Also set
	the entry_nr correctly so we get the menu set up right.
