@@ -248,9 +248,9 @@ run_dia.sh$(EXEEXT): Makefile.am
 	echo "    echo \"please run \$$0 once without a debugger.\"" >> run_dia.sh
 	echo "    exit 1" >> run_dia.sh
 	echo "  fi" >> run_dia.sh
-	echo "   \$$DEBUGGER \"\$$DIA_LIBS_PATH/lt-dia\" \"\$$*\"" >> run_dia.sh
+	echo "   \$$DEBUGGER \"\$$DIA_LIBS_PATH/lt-dia\" \"\$$@\"" >> run_dia.sh
 	echo "else" >> run_dia.sh
-	echo "   \"\$$DIA_APP_PATH/dia\" \"\$$*\"" >> run_dia.sh
+	echo "   \"\$$DIA_APP_PATH/dia\" \"\$$@\"" >> run_dia.sh
 	echo "fi" >> run_dia.sh
 	chmod a+x run_dia.sh
 
